--- a/app/src/main/res/layout/content_bet_info_item_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v2.xml
@@ -74,6 +74,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/margin_4"
                             android:ellipsize="end"
+                            android:layout_weight="1"
                             android:gravity="center_vertical"
                             android:lines="1"
                             android:text="@string/home_tab_in_play2"
