--- a/app/src/main/res/layout/settlement_date_item.xml
+++ b/app/src/main/res/layout/settlement_date_item.xml
@@ -2,10 +2,11 @@
 <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ctv_item"
-    android:layout_width="80dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="3dp"
+    android:minWidth="80dp"
     android:background="@drawable/effect_select_date_frame_5dp"
     android:button="@null"
     android:gravity="center"
@@ -15,6 +16,8 @@
     android:textAllCaps="true"
     android:textColor="@drawable/effect_select_date_text_gray"
     android:textSize="@dimen/textSize12sp"
+    android:paddingStart="3dp"
+    android:paddingEnd="3dp"
     tools:checked="true"
     tools:ignore="SpUsage"
     tools:text="星期一\n10月20日" />
