--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -465,6 +465,7 @@
             android:text="@string/submit"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
             style="?android:attr/borderlessButtonStyle"/>
 
     </LinearLayout>
