--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -270,6 +270,7 @@
             android:letterSpacing="0.2"
             android:paddingVertical="9dp"
             android:text="@string/submit"
+            android:textStyle="bold"
             android:textAlignment="center"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp" />
