--- a/app/src/main/res/layout/transfer_pay_fragment.xml
+++ b/app/src/main/res/layout/transfer_pay_fragment.xml
@@ -574,6 +574,7 @@
             android:text="@string/btn_submit"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
             style="?android:attr/borderlessButtonStyle"/>
 
     </LinearLayout>
