[fix] trello 帳戶歷史頁面 夜間模式ui bug

--- a/app/src/main/res/layout/item_footer_no_data.xml
+++ b/app/src/main/res/layout/item_footer_no_data.xml
@@ -3,6 +3,7 @@
     android:id="@+id/tv_no_data"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/color_191919_FCFCFC"
     android:gravity="center"
     android:paddingVertical="12dp"
     android:text="@string/no_data"
