--- a/app/src/main/res/layout/fragment_account_history.xml
+++ b/app/src/main/res/layout/fragment_account_history.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
-        android:background="@color/color_F3F4F5"
+        android:background="@color/color_191919_FCFCFC"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="1"
         tools:listitem="@layout/view_account_history_title_bar" />
