--- a/app/src/main/res/layout/view_quick_odd_btn_pair.xml
+++ b/app/src/main/res/layout/view_quick_odd_btn_pair.xml
@@ -25,7 +25,6 @@
             android:id="@+id/quick_odd_pair_tab_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:button="@null"
             android:text="@string/full_game"
             android:textColor="@color/selector_tab_text_color_light_gray"
@@ -38,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:button="@null"
+            android:layout_marginStart="16dp"
             android:text="@string/first_half_game"
             android:textColor="@color/selector_tab_text_color_light_gray"
             android:textSize="@dimen/textSize16sp"
