[調整] 進入我的賽事時不因顯示隱藏Toolbar而頁面跳動

--- a/app/src/main/res/layout/fragment_my_favorite.xml
+++ b/app/src/main/res/layout/fragment_my_favorite.xml
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:background="@color/color_191919_FCFCFC"
-                    android:visibility="invisible"
+                    android:visibility="gone"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:visibility="visible">
 
