[修正] 主頁推薦賽事玩法名稱會因系統文字大小變化問題

--- a/app/src/main/res/layout/home_recommend_vp.xml
+++ b/app/src/main/res/layout/home_recommend_vp.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:minHeight="48dp"
+        android:textSize="@dimen/textSize14sp"
         android:textColor="@color/color_e5e5e5_333333"
         android:textStyle="bold"
         tools:text="让球" />
