[修正] 主頁推薦賽事玩法名稱會因系統文字大小變化問題(冠軍、特優賠率版型)

--- a/app/src/main/res/layout/home_recommend_champion.xml
+++ b/app/src/main/res/layout/home_recommend_champion.xml
@@ -27,6 +27,7 @@
             android:minHeight="48dp"
             android:textColor="@color/color_e5e5e5_333333"
             android:textStyle="bold"
+            android:textSize="@dimen/textSize14sp"
             tools:text="让球" />
 
     </LinearLayout>
