--- a/app/src/main/res/layout/dialog_bottom_sheet_fast_bet_setting.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_fast_bet_setting.xml
@@ -33,7 +33,7 @@
                 android:layout_marginStart="10dp"
                 android:text="@string/bet_slip"
                 android:textColor="@color/color_e5e5e5_333333"
-                android:textSize="16sp"
+                android:textSize="@dimen/textSize16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/icon"
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/fast_bet_open_desc"
                 android:textColor="@color/color_A3A3A3_666666"
-                android:textSize="14sp"
+                android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
