[修正] 投注單 文字"移除全部"會因系統文字大小而變化

--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -161,6 +161,7 @@
                         android:background="@drawable/bg_radius_4_button_e44438"
                         android:gravity="center"
                         android:text="@string/bet_list_delete_all"
+                        android:textSize="@dimen/textSize12sp"
                         android:textColor="@android:color/white" />
 
                     <ImageView
