[Fix] sync color of status bar and loading progress bar

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -38,7 +38,8 @@
             <ProgressBar
                 android:id="@+id/progress_circular"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:indeterminateTint="@color/color_317FFF_0760D4" />
 
         </LinearLayout>
 
