--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -117,7 +117,8 @@
             <ProgressBar
                 android:id="@+id/pb_verification_code"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:indeterminateTint="@color/color_317FFF_0760D4" />
 
             <ImageView
                 android:id="@+id/iv_verification_code"
