--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -11,7 +11,8 @@
 
     <ProgressBar
         android:layout_width="40dp"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:indeterminateTint="@color/color_317FFF_0760D4" />
 
     <TextView
         android:id="@+id/pb_message"
