[Fix] 切換顏色模式後空白頁面(左上返回失效、主頁空白尚未修復)

--- a/app/src/main/res/layout/view_game_toolbar_v4.xml
+++ b/app/src/main/res/layout/view_game_toolbar_v4.xml
@@ -19,7 +19,7 @@
     <ImageButton
         android:id="@+id/game_toolbar_back"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:background="@color/transparent_black_0"
         android:paddingHorizontal="16dp"
         android:src="@drawable/ic_arrowleft"
