--- a/app/src/main/res/layout/content_bet_info_item_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v2.xml
@@ -116,7 +116,7 @@
                             android:layout_height="100dp"
                             android:src="@drawable/ic_bet_lock"
                             android:visibility="visible"
-                            app:layout_constraintBottom_toTopOf="@id/btnRecharge"
+                            app:layout_constraintBottom_toTopOf="@id/et_clickable"
                             app:layout_constraintEnd_toEndOf="parent" />
                         <View
                             android:id="@+id/v_point"
