--- a/app/src/main/res/layout/dialog_combo_detail.xml
+++ b/app/src/main/res/layout/dialog_combo_detail.xml
@@ -50,13 +50,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="11dp"
             android:minHeight="@dimen/margin_36"
+            android:overScrollMode="never"
             app:layout_constrainedHeight="true"
             app:layout_constraintBottom_toTopOf="@+id/bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_title"
             tools:itemCount="2"
-            tools:listitem="@layout/item_parlay_combo"
-            app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+            tools:listitem="@layout/item_parlay_combo" />
 
         <View
             android:id="@+id/bottom"
