--- a/app/src/main/res/layout/view_back_to_top.xml
+++ b/app/src/main/res/layout/view_back_to_top.xml
@@ -21,7 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:background="@drawable/bg_rectangle_4dp_gray_dark"
-        android:text="@string/return_to_top" />
+        android:text="@string/return_to_top"
+        android:textColor="@color/color_A3A3A3_666666"
+        android:textSize="@dimen/textSize14sp" />
 
 
 </LinearLayout>
