[調整] 冠軍頁面ui

--- a/app/src/main/res/layout/itemview_outright_odd_subtitle_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_odd_subtitle_v4.xml
@@ -4,13 +4,13 @@
     android:id="@+id/outright_odd_subtitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="16dp"
     android:background="@color/color_191919_FCFCFC"
     android:gravity="center"
+    android:lineSpacingExtra="4dp"
     android:orientation="vertical"
-    android:paddingHorizontal="10dp"
     android:paddingTop="11dp"
     android:paddingBottom="11dp"
-    android:singleLine="true"
     android:textColor="@color/color_317FFF_0760D4"
     android:textSize="@dimen/textSize12sp"
     android:textStyle="bold"
