--- a/app/src/main/res/layout/itemview_outright_league_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_league_v4.xml
@@ -6,58 +6,65 @@
     android:layout_height="wrap_content"
     tools:ignore="spUsage">
 
-    <View
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/outright_info_block"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:background="@color/color_141414_f3f3f3"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:paddingVertical="10dp"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/outright_league_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:ellipsize="end"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
-        android:singleLine="true"
-        android:textColor="@color/color_e5e5e5_333333"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        app:layout_constraintBottom_toTopOf="@id/outright_league_date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/outright_info_block"
-        app:layout_constraintTop_toTopOf="@id/outright_info_block"
-        app:layout_constraintVertical_chainStyle="packed"
-        tools:text="欧洲冠军杯2020/2021" />
+        <TextView
+            android:id="@+id/outright_league_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:lineSpacingExtra="4dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:textAllCaps="true"
+            android:textColor="@color/color_e5e5e5_333333"
+            android:textSize="@dimen/textSize16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/outright_league_date"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/outright_info_block"
+            app:layout_constraintTop_toTopOf="@id/outright_info_block"
+            app:layout_constraintVertical_chainStyle="spread"
+            tools:text="欧洲冠军杯2020/2021asdasdasdasdsadsadasdsdafsadfsdafsadfasfdasfsdafadsfdsafasdfasfasdafadsfasf" />
 
-    <TextView
-        android:id="@+id/outright_league_date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/color_A3A3A3_666666"
-        android:textSize="@dimen/textSize12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/outright_info_block"
-        app:layout_constraintEnd_toStartOf="@+id/outright_league_time"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="@+id/outright_league_name"
-        app:layout_constraintTop_toBottomOf="@+id/outright_league_name"
-        tools:text="03/03" />
+        <TextView
+            android:id="@+id/outright_league_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:includeFontPadding="false"
+            android:textColor="@color/color_A3A3A3_666666"
+            android:textSize="@dimen/textSize12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/outright_info_block"
+            app:layout_constraintEnd_toStartOf="@+id/outright_league_time"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/outright_league_name"
+            app:layout_constraintTop_toBottomOf="@+id/outright_league_name"
+            tools:text="03/03" />
 
-    <TextView
-        android:id="@+id/outright_league_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:textColor="@color/color_A3A3A3_666666"
-        android:textSize="@dimen/textSize12sp"
-        app:layout_constraintBottom_toBottomOf="@+id/outright_league_date"
-        app:layout_constraintEnd_toEndOf="@+id/outright_league_name"
-        app:layout_constraintStart_toEndOf="@id/outright_league_date"
-        app:layout_constraintTop_toBottomOf="@+id/outright_league_name"
-        tools:text="23:00" />
+        <TextView
+            android:id="@+id/outright_league_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="2dp"
+            android:includeFontPadding="false"
+            android:textColor="@color/color_A3A3A3_666666"
+            android:textSize="@dimen/textSize12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/outright_league_date"
+            app:layout_constraintEnd_toEndOf="@+id/outright_league_name"
+            app:layout_constraintStart_toEndOf="@id/outright_league_date"
+            app:layout_constraintTop_toBottomOf="@+id/outright_league_name"
+            tools:text="23:00" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/outright_league_odd_list"
@@ -66,8 +73,10 @@
         android:nestedScrollingEnabled="false"
         android:orientation="vertical"
         android:overScrollMode="never"
+        android:layout_marginBottom="12dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/outright_info_block"
+        app:layout_constraintBottom_toBottomOf="parent"
         tools:itemCount="3"
         tools:listitem="@layout/itemview_outright_odd_v4" />
 
