--- a/app/src/main/res/layout/dialog_bottom_sheet_icon_and_tick.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_icon_and_tick.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/bottom_sheet_close"
+            android:textAllCaps="true"
             android:textColor="@color/color_8F8F8F_999999"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toBottomOf="parent"
