--- a/app/src/main/res/layout/fragment_account_history_next.xml
+++ b/app/src/main/res/layout/fragment_account_history_next.xml
@@ -28,7 +28,7 @@
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="1"
-            android:background="@color/color_F3F4F5"
+            android:background="@color/color_141414_F3F4F5"
             tools:listitem="@layout/view_account_history_next_title_bar" />
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
