--- a/app/src/main/res/layout/item_account_history_next_content_outright.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_outright.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:text="@{matchOdd.leagueName}"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
                 app:autoSizeMaxTextSize="@dimen/textSize14sp"
                 app:autoSizeMinTextSize="@dimen/textSize8sp"
@@ -52,7 +52,7 @@
                 android:layout_marginStart="4dp"
                 android:gravity="left"
                 android:text="@string/unknown_data"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_league_name"
@@ -66,7 +66,7 @@
                 android:layout_marginStart="4dp"
                 android:gravity="left"
                 android:text="@{matchOdd.playCateName}"
-                android:textColor="@color/color_191919_FCFCFC"
+                android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_slash"
