--- a/app/src/main/res/layout/content_last_total_record.xml
+++ b/app/src/main/res/layout/content_last_total_record.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:text="@string/total"
-        android:textColor="@color/color_FFFFFF_FFFFFF"
+        android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp" />
 
     <TextView
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="end"
-        android:textColor="@color/color_FFFFFF_FFFFFF"
+        android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp"
         tools:text="9,999,587.000 RMB" />
 
