--- a/app/src/main/res/layout/content_match_record.xml
+++ b/app/src/main/res/layout/content_match_record.xml
@@ -21,7 +21,7 @@
             android:id="@+id/title_league_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_FFFFFF_FFFFFF"
+            android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/textSize14sp"
             tools:text="NBA季后赛" />
 
