--- a/app/src/main/res/layout/content_parlay_record.xml
+++ b/app/src/main/res/layout/content_parlay_record.xml
@@ -28,7 +28,7 @@
             android:id="@+id/title_parlay_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_191919_FCFCFC"
+            android:textColor="@color/color_FFFFFF"
             android:textSize="@dimen/textSize14sp"
             tools:text="2 串 1" />
     </LinearLayout>
