--- a/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item.xml
@@ -37,14 +37,14 @@
             android:clickable="true"
             android:gravity="center_vertical"
             android:orientation="vertical"
-            android:paddingStart="@dimen/margin_8"
-            android:paddingTop="@dimen/margin_8"
-            android:paddingEnd="@dimen/margin_8">
+            android:paddingTop="@dimen/margin_8">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_8"
+                android:layout_marginBottom="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 app:cardCornerRadius="@dimen/margin_6"
                 app:cardUseCompatPadding="true">
 
@@ -248,6 +248,7 @@
                                 android:textColor="@color/color_E44438_e44438"
                                 android:textSize="@dimen/textSize12sp"
                                 android:visibility="gone"
+                                tools:visibility="visible"
                                 app:layout_constraintTop_toBottomOf="@+id/tv_match"
                                 app:layout_constraintBottom_toTopOf="@+id/viewGrey"/>
 
@@ -366,7 +367,7 @@
                                 app:layout_constraintStart_toStartOf="@+id/et_bet"
                                 app:layout_constraintTop_toBottomOf="@+id/et_bet"
                                 tools:text="@string/bet_info_list_minimum_limit_amount"
-                                tools:visibility="gone" />
+                                tools:visibility="visible" />
 
                             <!--預留空間為了對應鍵盤與警告提示自動增長-->
                             <View
@@ -381,7 +382,7 @@
                                 android:layout_height="120dp"
                                 android:layout_marginTop="@dimen/margin_10"
                                 android:visibility="gone"
-                                tools:visibility="gone"
+                                tools:visibility="visible"
                                 app:layout_constraintTop_toBottomOf="@+id/tv_error_message" />
 
                             <!--                            <LinearLayout-->
@@ -417,6 +418,27 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
 
+            <LinearLayout
+                android:id="@+id/ll_odds_changed"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_odds_changed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/color_232628_EAF4FE"
+                    android:gravity="center"
+                    android:paddingVertical="6dp"
+                    android:paddingHorizontal="2dp"
+                    android:text="@string/bet_info_odd_content_changed"
+                    android:textColor="@color/color_E44438_e44438"
+                    android:textSize="@dimen/textSize12sp"
+                    android:visibility="gone"
+                    tools:visibility="visible"/>
+            </LinearLayout>
+
+            <include layout="@layout/view_bet_info_close_message" />
+
         </LinearLayout>
 
         <View
@@ -431,9 +453,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
-
-            <include layout="@layout/view_bet_info_close_message" />
 
 
             <LinearLayout
