--- a/app/src/main/res/layout/view_bet_info_close_message.xml
+++ b/app/src/main/res/layout/view_bet_info_close_message.xml
@@ -3,16 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:id="@+id/cl_close_waring"
     android:visibility="gone"
-    android:background="@color/color_191919_FCFCFC"
-    tools:ignore="SpUsage">
+    android:background="@color/color_232628_EAF4FE"
+    tools:ignore="SpUsage"
+    tools:visibility="visible">
 
     <TextView
         android:id="@+id/tv_close_warning"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingVertical="6dp"
         android:gravity="center"
         android:text="@string/bet_info_odd_content_close"
         android:textColor="@color/color_E44438_e44438"
