--- a/app/src/main/res/layout/fragment_game_league.xml
+++ b/app/src/main/res/layout/fragment_game_league.xml
@@ -40,7 +40,8 @@
                     android:id="@+id/game_league_toolbar_v4"
                     layout="@layout/view_game_toolbar_v4"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <androidx.recyclerview.widget.RecyclerView
