--- a/app/src/main/res/layout/itemview_country_league_v4.xml
+++ b/app/src/main/res/layout/itemview_country_league_v4.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
+    android:layout_height="wrap_content"
+    android:minHeight="56dp"
     android:background="@color/color_191919_FCFCFC">
 
     <androidx.legacy.widget.Space
