[fix] 賽事標題粗度太粗, feedback 圖片高度調整

--- a/app/src/main/res/layout/fragment_feedback_suggest.xml
+++ b/app/src/main/res/layout/fragment_feedback_suggest.xml
@@ -24,9 +24,10 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="164dp"
+                android:layout_height="148dp"
                 android:layout_gravity="center_horizontal"
                 android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
                 android:src="@drawable/ic_feedback_banner" />
 
             <LinearLayout
