--- a/app/src/main/res/layout/content_parlay_match.xml
+++ b/app/src/main/res/layout/content_parlay_match.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:divider="@drawable/divider_color_gray_light2"
     android:orientation="vertical"
-    android:showDividers="end|middle|beginning">
+    android:showDividers="end|middle|beginning"
+    tools:ignore="SpUsage,UselessParent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,6 +30,7 @@
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="篮球 让球" />
+
             <TextView
                 android:id="@+id/tv_count_down_parley"
                 android:layout_width="wrap_content"
@@ -36,7 +38,6 @@
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/textSize14sp"
                 tools:text="30s" />
-
 
         </LinearLayout>
 
@@ -50,20 +51,16 @@
                 android:id="@+id/content_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize13sp"
-                android:layout_marginEnd="4dp"
                 tools:text="06-22" />
-
-<!--            <androidx.legacy.widget.Space-->
-<!--                android:layout_width="4dp"-->
-<!--                android:layout_height="wrap_content" />-->
 
             <TextView
                 android:id="@+id/content_league"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize13sp"
                 tools:text="NBA季后赛" />
@@ -76,60 +73,35 @@
                 android:textSize="@dimen/textSize12sp"
                 tools:text="(5-26)" />
 
-
         </LinearLayout>
-
 
         <TextView
             android:id="@+id/parlay_play_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_A3A3A3_666666"
             android:layout_marginTop="4dp"
+            android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize13sp"
             tools:text="2022-02-25 10:42" />
-        
-        <LinearLayout
+
+        <TextView
+            android:id="@+id/tv_team_names"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/content_home_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_A3A3A3_666666"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="密尔沃基雄鹿" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="6dp"
-                android:layout_marginEnd="6dp"
-                android:text="@string/versus"
-                android:textColor="@color/color_A3A3A3_666666"
-                android:textSize="@dimen/textSize14sp" />
-
-            <TextView
-                android:id="@+id/content_away_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_A3A3A3_666666"
-                android:textSize="@dimen/textSize12sp"
-                tools:text="亚特兰大老鹰" />
-        </LinearLayout>
+            android:textColor="@color/color_A3A3A3_666666"
+            android:textSize="@dimen/textSize12sp"
+            tools:text="密尔沃基雄鹿 v 亚特兰大老鹰" />
 
         <TextView
             android:id="@+id/parlay_play_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_A3A3A3_666666"
             android:layout_marginTop="4dp"
+            android:textColor="@color/color_A3A3A3_666666"
             android:textSize="@dimen/textSize13sp"
             tools:text="密尔沃基雄鹿 6.5 \@ 1.860" />
 
     </LinearLayout>
+
 </LinearLayout>
