--- a/app/src/main/res/layout/publicity_sub_title_view.xml
+++ b/app/src/main/res/layout/publicity_sub_title_view.xml
@@ -22,6 +22,7 @@
         android:layout_marginStart="6dp"
         android:layout_weight="1"
         android:text="@string/hot_recommend"
+        android:textAllCaps="true"
         android:textColor="@color/color_e5e5e5_333333"
         android:textSize="@dimen/textSize14sp"
         android:textStyle="bold" />
