調整投注 UI 版型

--- a/app/src/main/res/layout/view_bet_info_close_message.xml
+++ b/app/src/main/res/layout/view_bet_info_close_message.xml
@@ -14,6 +14,8 @@
         android:id="@+id/tv_close_warning"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         android:paddingVertical="6dp"
         android:gravity="center"
         android:text="@string/bet_info_odd_content_close"
@@ -32,6 +34,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingBottom="6dp"
         android:text="@string/bet_info_remove_closed"
         android:textColor="@color/color_317FFF_0760D4"
         android:textSize="@dimen/textSize12sp"
