--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -379,9 +379,9 @@
                 android:background="@color/color_232628_EAF4FE"
                 android:gravity="center"
                 android:paddingStart="@dimen/margin_8"
-                android:paddingTop="9dp"
+                android:paddingTop="6dp"
+                android:paddingBottom="6dp"
                 android:paddingEnd="@dimen/margin_8"
-                android:paddingBottom="10dp"
                 android:text="@string/bet_info_odd_content_changed"
                 android:textColor="@color/color_E44438_e44438"
                 android:textSize="@dimen/textSize12sp"
@@ -422,24 +422,28 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:paddingStart="@dimen/margin_8"
-                android:paddingTop="3dp"
+                android:paddingTop="6dp"
                 android:paddingEnd="@dimen/margin_8"
-                android:paddingBottom="3dp"
+                android:paddingBottom="6dp"
                 android:visibility="gone"
                 tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_odds_closed_changed"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="6dp"
                     android:text="@string/bet_info_odd_content_changed"
+                    android:textAlignment="center"
                     android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="6dp"
                     android:text="@string/bet_info_odd_content_close"
+                    android:textAlignment="center"
                     android:textColor="@color/color_E44438_e44438"
                     android:textSize="@dimen/textSize12sp" />
 
