[fix] 註冊登入輸入匡中 圖示 顏色修正

--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -101,6 +101,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     app:iconSignifier="@drawable/ic_login_verify"
+                    app:isResponsiveIconColor="false"
+                    app:primaryColor="@color/color_AFAFB1"
                     app:singleText="@string/verification_code">
 
                     <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
