--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -82,6 +82,8 @@
                 android:layout_marginTop="20dp"
                 app:hintText="@string/hint_recommend_code"
                 app:iconSignifier="@drawable/ic_login_recommend"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/recommend_code"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +109,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_member_account"
                 app:iconSignifier="@drawable/ic_login_account"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/member_account"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -132,6 +136,8 @@
                 app:endIcon="@drawable/ic_eye_close"
                 app:hintText="@string/hint_register_password"
                 app:iconSignifier="@drawable/ic_login_password"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/login_password"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -157,6 +163,8 @@
                 app:endIcon="@drawable/ic_eye_close"
                 app:hintText="@string/hint_confirm_password"
                 app:iconSignifier="@drawable/ic_login_password"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/confirm_password"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -181,6 +189,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_real_name"
                 app:iconSignifier="@drawable/ic_login_name"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/real_name"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -206,6 +216,8 @@
                 app:endIcon="@drawable/ic_eye_close"
                 app:hintText="@string/hint_withdrawal_pwd"
                 app:iconSignifier="@drawable/ic_login_withdraw_number"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/withdrawal_pwd"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -231,6 +243,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_qq_number"
                 app:iconSignifier="@drawable/ic_login_qq"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/qq_number"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -255,6 +269,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_phone_number"
                 app:iconSignifier="@drawable/ic_login_phone_number"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:subLabelText="+63"
                 app:labelText="@string/phone_number"
                 app:labelTextStyle="normal"
@@ -290,6 +306,8 @@
                     android:layout_weight="1"
                     app:hintText="@string/hint_verification_code_by_sms"
                     app:iconSignifier="@drawable/ic_login_verify"
+                    app:isResponsiveIconColor="false"
+                    app:primaryColor="@color/color_AFAFB1"
                     app:labelText="@string/verification_code_by_sms"
                     app:labelTextStyle="normal"
                     app:layout_constraintTop_toTopOf="parent"
@@ -354,6 +372,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_e_mail"
                 app:iconSignifier="@drawable/ic_login_mail"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/e_mail"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -378,6 +398,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_postal_code"
                 app:iconSignifier="@drawable/ic_postal_code"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/postal_code"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -402,6 +424,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_province"
                 app:iconSignifier="@drawable/ic_province"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/province"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -426,6 +450,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_city"
                 app:iconSignifier="@drawable/ic_city"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/city"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -450,6 +476,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_e_address"
                 app:iconSignifier="@drawable/ic_detail_address"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/e_address"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -474,6 +502,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_we_chat_number"
                 app:iconSignifier="@drawable/ic_login_wechat"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/we_chat"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -498,6 +528,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_zalo"
                 app:iconSignifier="@drawable/ic_login_zalo"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/zalo"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -522,6 +554,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_facebook"
                 app:iconSignifier="@drawable/ic_login_facebook"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/facebook"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -546,6 +580,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_whats_app"
                 app:iconSignifier="@drawable/ic_login_whatsapp"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/whats_app"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -570,6 +606,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_telegram"
                 app:iconSignifier="@drawable/ic_login_telegram"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/telegram"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -594,6 +632,8 @@
                 android:layout_marginTop="4dp"
                 app:hintText="@string/hint_security_pb"
                 app:iconSignifier="@drawable/ic_security_pb"
+                app:isResponsiveIconColor="false"
+                app:primaryColor="@color/color_AFAFB1"
                 app:labelText="@string/security_pb"
                 app:labelTextStyle="normal"
                 app:layout_constraintStart_toStartOf="parent"
@@ -628,6 +668,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     app:iconSignifier="@drawable/ic_login_verify"
+                    app:isResponsiveIconColor="false"
+                    app:primaryColor="@color/color_AFAFB1"
                     app:singleText="@string/verification_code"
                     app:singleTextStyle="normal"
                     app:hideSelectedTitle="true">
