[fix] 註冊 登入頁 輸入匡對照h5調整: 顏色、文案

--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -115,7 +115,8 @@
                         android:maxLength="15"
                         android:maxLines="1"
                         android:ellipsize="end"
-                        android:textSize="@dimen/textSize14sp" />
+                        android:textSize="@dimen/textSize14sp"
+                        android:textColor="@color/color_FFFFFF_DE000000"/>
 
                 </org.cxct.sportlottery.widget.boundsEditText.TextFieldBoxes>
 
