[調整] 冠軍收折邏輯

--- a/app/src/main/res/layout/itemview_outright_odd_more_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_odd_more_v4.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_more_content"
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:background="@color/color_191919_FCFCFC"
+    android:orientation="horizontal"
+    android:gravity="center"
     tools:ignore="spUsage">
 
-    <TextView
+    <TextView android:id="@+id/tvMore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawablePadding="10dp"
         android:text="@string/display_more"
         android:textSize="@dimen/textSize14sp"
-        android:textStyle="bold"
-        android:textAllCaps="true"
-        app:drawableRightCompat="@drawable/ic_arrow_gray_right"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textAllCaps="true" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView android:id="@+id/ivMoreIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_arrow_down_gray"
+        android:layout_marginStart="10dp"/>
+
+</LinearLayout>
