[調整] 投注單輸入金額顏色, 可贏金額正常字體(原粗體)

--- a/app/src/main/res/layout/content_bet_info_item_quota_detail_v2.xml
+++ b/app/src/main/res/layout/content_bet_info_item_quota_detail_v2.xml
@@ -97,8 +97,7 @@
                 android:gravity="right"
                 android:textColor="@color/color_FFFFFF_060F20"
                 android:textSize="@dimen/textSize12sp"
-                tools:text="293.000"
-                android:textStyle="bold"/>
+                tools:text="293.000" />
 
         </LinearLayout>
 
