--- a/app/src/main/res/layout/itemview_country.xml
+++ b/app/src/main/res/layout/itemview_country.xml
@@ -1,50 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <View
-        android:id="@+id/country_border"
+    <TextView
+        android:id="@+id/country_name"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/color_212121_ededed"
-        app:layout_constraintTop_toTopOf="parent"/>
-
-    <TextView
-        android:id="@+id/country_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="12dp"
         android:ellipsize="end"
-        android:singleLine="true"
-        android:textColor="#202020"
+        android:gravity="center_vertical"
+        android:lineHeight="20dp"
+        android:maxLines="2"
+        android:paddingStart="16dp"
+        android:paddingEnd="34dp"
+        android:textAllCaps="true"
+        android:textColor="@color/color_e5e5e5_202020"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/country_border"
-        app:layout_constraintEnd_toStartOf="@id/iv_country"
-        app:layout_constraintStart_toStartOf="@id/country_border"
-        app:layout_constraintTop_toTopOf="@id/country_border"
-        tools:text="英格兰" />
+        tools:text="欧洲足球锦标赛2020" />
 
     <ImageView
         android:id="@+id/iv_country"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/ic_earth"
-        app:layout_constraintBottom_toBottomOf="@id/country_border"
-        app:layout_constraintEnd_toEndOf="@id/country_border"
-        app:layout_constraintTop_toTopOf="@id/country_border"
-        />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="10dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_earth" />
 
     <net.cachapa.expandablelayout.ExpandableLayout
         android:id="@+id/country_league_expand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/country_border"
+        android:layout_below="@id/country_name"
         tools:el_expanded="true">
 
         <androidx.recyclerview.widget.RecyclerView
@@ -64,6 +56,6 @@
         android:layout_height="8dp"
         android:background="@color/color_191919_FCFCFC"
         android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/country_border"/>
+        android:layout_below="@id/country_league_expand"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
