[Fix] dark mode 中 cardView 4角會留白

--- a/app/src/main/res/layout/content_rv_bank_list_new_no_card.xml
+++ b/app/src/main/res/layout/content_rv_bank_list_new_no_card.xml
@@ -9,6 +9,7 @@
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="20dp"
     app:cardElevation="0dp"
+    app:cardBackgroundColor="@color/transparent_black_0"
     app:cardCornerRadius="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
