--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -118,6 +118,7 @@
     <color name="color_212121_eeeeee">@color/color_eeeeee</color>
     <color name="color_212121_ededed">@color/color_ededed</color>
     <color name="color_1F1F1F_e6e6e6">@color/color_e6e6e6</color>
+    <color name="color_1F1F1F_E2E2E2">@color/color_E2E2E2</color>
     <color name="color_2B2B2B_e2e2e2">@color/color_E2E2E2</color>
     <color name="color_303030_dddddd">@color/color_dddddd</color>
     <color name="color_404040_cccccc">@color/color_cccccc</color>
