--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -52,9 +52,9 @@
         <View
             android:id="@+id/v_divider"
             android:layout_width="1dp"
-            android:layout_height="match_parent"
+            android:layout_height="20dp"
             android:layout_margin="10dp"
-            android:background="@color/color_191919_EEEFF0" />
+            android:background="@color/color_1F1F1F_E2E2E2" />
 
         <EditText
             android:id="@+id/et_input"
