調整字型粗體 700
調整大廳頁版型

--- a/app/src/main/res/layout/itemview_country_v4.xml
+++ b/app/src/main/res/layout/itemview_country_v4.xml
@@ -59,11 +59,10 @@
     </net.cachapa.expandablelayout.ExpandableLayout>
 
     <!-- 間隔 -->
-    <View android:id="@+id/SpaceItemDecorationView"
+    <View
         android:layout_width="match_parent"
         android:layout_height="8dp"
         android:background="@color/color_191919_FCFCFC"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/country_border"/>
+        app:layout_constraintTop_toBottomOf="@+id/country_expand"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
