--- a/app/src/main/res/layout/itemview_league_v5.xml
+++ b/app/src/main/res/layout/itemview_league_v5.xml
@@ -44,10 +44,9 @@
         tools:listitem="@layout/itemview_league_odd_v5" />
 
     <View
-        android:id="@+id/SpaceItemDecorationView"
         android:layout_width="match_parent"
         android:layout_height="8dp"
-        android:background="@color/color_191919_FCFCFC"
-        android:layout_below="@id/league_odd_list" />
+        android:layout_below="@id/league_odd_list"
+        android:background="@color/color_191919_FCFCFC" />
 
 </RelativeLayout>
